--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: red;
     text-align: center;
-    font-family: "Arial";
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -14,7 +14,7 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.9em;
 }
 #cabecera #tagline{
     padding: 0 0 0 1em;
@@ -37,4 +37,11 @@ body
 #post
 {
     padding: 1em;
+}
+#footer 
+{
+    background: #7777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
